--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@android:style/Theme.NoTitleBar">
+        android:supportsRtl="true">
+        <!--android:theme="@android:style/Theme.NoTitleBar">-->
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,7 +19,8 @@
         <activity
             android:name=".PopUpVotar"
             android:theme="@style/AppTheme.PopUp" />
-        <activity android:name=".regras"></activity>
+        <activity android:name=".regras" />
+        <activity android:name=".sobre"></activity>
     </application>
 
 </manifest>
