--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dfgv.presidenciaveis">
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name=
-        "android.permission.WRITE_EXTERNAL_STORAGE" />
-    <application
 
+    <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -22,13 +19,9 @@
         <activity
             android:name=".PopUpVotar"
             android:theme="@style/AppTheme.PopUp" />
-        <activity android:name=".regras" />
-        <activity android:name=".sobre" />
-        <activity android:name=".placar"></activity>
-
-
-
-
+        <activity
+            android:name=".PopUpSelecionar"
+            android:theme="@style/AppTheme.PopUp" />
     </application>
 
 </manifest>
