--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,15 +19,16 @@
             </intent-filter>
         </activity>
         <activity android:name=".placar" />
-        <activity android:name=".sobre"/>
-        <activity android:name=".regras"/>
-        <activity android:name=".home"/>
+        <activity android:name=".sobre" />
+        <activity android:name=".regras" />
+        <activity android:name=".home" />
         <activity
             android:name=".PopUpVotar"
             android:theme="@style/AppTheme.PopUp" />
         <activity
             android:name=".PopUpSelecionar"
             android:theme="@style/AppTheme.PopUp" />
+        <activity android:name=".PopUpEleger"></activity>
     </application>
 
 </manifest>
